--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
     androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.5.2'
     androidTestImplementation 'com.kaspersky.android-components:kaspresso-allure-support:1.5.2'
-    androidTestImplementation 'io.qameta.allure:allure-kotlin:2.2.4'
+    androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.2.4'
 }
