--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,18 +10,18 @@ on:
 
 jobs:
   test:
-    runs-on: macOS-10.15
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-         distribution: 'zulu'
-         java-version: '17'
-         cache: 'gradle'
+          distribution: 'zulu'
+          java-version: '17'
+          cache: 'gradle'
       - uses: malinskiy/action-android/install-sdk@release/0.1.3
       - uses: malinskiy/action-android/emulator-run-cmd@release/0.1.3
         with:
-         cmd: ./gradlew connectedCheck
-         tag: default
-         abi: x86
-         api: 29
+          cmd: ./gradlew connectedCheck
+          tag: default
+          abi: x86
+          api: 29
